src/main/java/com/example/gitrepoexplorer/infrastructure/error/dto/BranchNotFoundExceptionDto.java
package com.example.gitrepoexplorer.infrastructure.error.dto;

public record BranchNotFoundExceptionDto(int status, String message) {
}
